kubernetes/db-host.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-host
  labels:
    app: db-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-host
  template:
    metadata:
      labels:
        app: db-host
    spec:
      containers:
        - name: db-host
          image: mysql:8.0
          ports:
            - containerPort: 3306
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 90
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: db-host
spec:
  type: ClusterIP
  selector:
    app: db-host
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
