kubernetes/db-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
  labels:
    app: db-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - name: db-service
          image: roman626/db-service
          ports:
          - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /api/all
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/all
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ClusterIP
  selector:
    app: db-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
