kubernetes/registration-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-server
  labels:
    app: registration-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registration-server
  template:
    metadata:
      labels:
        app: registration-server
    spec:
      containers:
        - name: registration-server
          image: roman626/registration-server
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: registration-server
spec:
  type: ClusterIP
  selector:
    app: registration-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
