kubernetes/validator-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-service
  labels:
    app: validator-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator-service
  template:
    metadata:
      labels:
        app: validator-service
    spec:
      containers:
        - name: validator-service
          image: roman626/validator-service
          ports:
            - containerPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: validator-service
spec:
  type: ClusterIP
  selector:
    app: validator-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
