kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: config-server
      http:
        paths:
          - path: /config
            pathType: Prefix
            backend:
              serviceName: config-server
              servicePort: 8888
    - host:
      http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              serviceName: registration-server
              servicePort: 8761
    - host:
      http:
        paths:
          - path: /db-service
            pathType: Prefix
            backend:
              serviceName: db-service
              servicePort: 8082
    - host:
      http:
        paths:
          - path: /validator-service
            pathType: Prefix
            backend:
              serviceName: validator-service
              servicePort: 8083
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: admin-service
              servicePort: 8084
